# cmake_template

./: CMakeLists.txt  cmake.cpp  config.yml
